--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
+  <script src="https://use.fontawesome.com/710c318689.js"></script>
 </head>
 
 <body>
