--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
-  <script src="https://use.fontawesome.com/710c318689.js"></script>
+  <!-- <script src="https://use.fontawesome.com/710c318689.js"></script> -->
 </head>
 
 <body>
@@ -22,7 +22,9 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+      ,
     -->
+  <script src='./css/fontawesome.js'></script>
 </body>
 
 </html>
