--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
   <!-- <script src="https://use.fontawesome.com/710c318689.js"></script> -->
+  <link rel="stylesheet" href="./css/fontawesome.min.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
       ,
     -->
-  <script src='./css/fontawesome.js'></script>
+  <script src='./js/fontawesome.js'></script>
 </body>
 
 </html>
